--- a/game.css
+++ b/game.css
@@ -24,13 +24,15 @@ h2 {
 	margin: 20px;
 }
 
-button {
+#buttonDiv {
+	margin-top: 20px;
+}
+
+.button {
 	border: 1px solid black;
+	padding: 10px;
 	font-size: 20pt;
-	margin-top: 5vh;
-	width: 30vw;
-	margin-left: auto;
-	margin-right: auto;
+	margin: 10px;
 	font-family: monospace;
 }
 
