--- a/game.css
+++ b/game.css
@@ -30,7 +30,8 @@ h2 {
 
 .button {
 	border: 1px solid black;
-	padding: 10px;
+	padding: 5px;
+	padding: 5px 10px;
 	font-size: 20pt;
 	margin: 10px;
 	font-family: monospace;
