--- a/game.css
+++ b/game.css
@@ -13,6 +13,14 @@ body {
 	font-family: sans-serif;
 }
 
+#timer {
+	font-weight: normal;
+}
+
+#currentTime {
+	font-weight: bold;
+}
+
 h1 {
 	font-size: 80pt;
 	margin: auto;
