--- a/index.css
+++ b/index.css
@@ -1,10 +1,14 @@
+:root {
+	--current-color: white;
+}
+
 body {
 	margin: 0px;
 	display: flex;
 	overflow: hidden;
-	color: white;
-	border-color: white;
-	background-color: white;
+	color: var(--current-color);
+	border-color: var(--current-color);
+	background-color: var(--current-color);
 }
 
 #sidebar {
