units & cart CSS

--- a/index.css
+++ b/index.css
@@ -50,6 +50,9 @@ body {
 	flex-direction: row;
 	justify-content: space-around;
 	font-size: 2vw;
+	border: 0.75vw solid var(--current-color);
+	margin: 0.75vw;
+	border-radius: 3vw;
 }
 
 #units section {
@@ -69,10 +72,21 @@ body {
 	cursor: pointer;
 }
 
+#cart button {
+	font-size: 2.5vw;
+	border-radius: 3vw; 
+	background-color: var(--current-color);
+	color: white;
+	border: none;
+	margin: 1vw;
+}
+
 #cartContents {
 	display: flex;
 	flex-flow: row wrap;
 	justify-content: center;
+	font-size: 2vw;
+	margin: 0vw 2vw 1vw 2vw;
 }
 
 #cartContents > * {
