--- a/index.css
+++ b/index.css
@@ -22,7 +22,7 @@ button, input {
 	height: 94vh;
 	overflow: scroll;
 	width: 40%;
-	border: 3vh solid;
+	border: 30px solid;
 	border-right: 0px;
 	border-color: inherit;
 	background-color: inherit;
@@ -32,26 +32,30 @@ main {
 	width: 60%;
 	text-align: center;
 	display: flex;
-	flex-flow: column nowrap;
+	flex-flow: row wrap;
+	height: 100vh;
 	overflow: scroll;
-	justify-content: flex-start;
+	justify-content: center;
 	align-content: center;
 }
 
 main > * {
 	background-color: white;
-	margin: 3vh;
-	border-radius: 3vw;
+	margin: 15px;
+	border-radius: 30px;
+	display: block;
 }
 
 #units {
 	display: flex;
 	flex-direction: row;
 	justify-content: space-around;
-	font-size: 2vw;
-	border: 0.75vw solid var(--current-color);
-	margin: 0.75vw;
-	border-radius: 3vw;
+	font-size: 11pt;
+	font-weight: bold;
+	font-family: monospace;
+	border: 5px solid var(--current-color);
+	margin: 5px;
+	border-radius: inherit;
 }
 
 #units section {
@@ -59,11 +63,11 @@ main > * {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	margin: 1vw 0.5vw;
+	margin: 2.5px 5px;
 }
 
 #units p {
-	margin: 0vw 0.25vw;
+	margin: 0px;
 }
 
 #units p:hover {
@@ -72,17 +76,16 @@ main > * {
 }
 
 div > button {
-	font-size: 2.5vw;
-	border-radius: 3vw; 
+	font-size: 18pt;
+	border-radius: inherit; 
 	background-color: var(--current-color);
 	color: white;
 	border: none;
-	margin: 1vw;
+	margin: 10px;
 }
 
 input, select {
-	font-size: 2.5vw;
-	padding: 0.25vw;
+	font-size: 18pt;
 	text-align: center;
 }
 input[type="number"] {
@@ -98,8 +101,9 @@ input[type="number"]::-webkit-outer-spin-button {
 	display: flex;
 	flex-flow: row wrap;
 	justify-content: center;
-	font-size: 2vw;
-	margin: 0vw 2vw 1vw 2vw;
+	font-size: 11pt;
+	font-family: monospace;
+	margin: 0px 10px 5px 10px;
 }
 
 #cartContents > * {
@@ -113,27 +117,22 @@ input[type="number"]::-webkit-outer-spin-button {
 	justify-content: space-around;
 }
 
-#bank div {
-	margin: 1vw;
-	margin-bottom: 2vw;
-}
-
 #bank input {
 	width: 40px;
 }
 
 main h1 {
-	margin: 1vh 2vw;
-	font-size: 4vw;
+	margin: 10px 20px;
+	font-size: 6vw;
 }
 
 #next {
-	font-size: 4vw;
+	font-size: 40pt;
 	font-weight: bold;
 }
 
 #reset {
-	font-size: 2vw;
+	font-size: 20pt;
 	width: 25%;
 	margin: 0 auto;
 }
